versioned_docs/version-1.38.1/monitoring/metrics/metrics.md
---
title: Metrics
sidebar_position: 0
---

Currently, Nethermind provides the following options to monitor and collect metrics about itself:

- [Grafana and Prometheus](grafana-and-prometheus.md)
- [dotnet-counters](dotnet-counters.md)

## Parameters by namespace

<!--[start autogen]-->

### Aura

- #### `nethermind_au_ra_step` \{#au_ra_step\}
  
  Current AuRa step

- #### `nethermind_commit_hash_transaction` \{#commit_hash_transaction\}
  
  RANDAO number of commit hash transactions

- #### `nethermind_emit_initiate_change` \{#emit_initiate_change\}
  
  POSDAO number of emit init change transactions

- #### `nethermind_reported_benign_misbehaviour` \{#reported_benign_misbehaviour\}
  
  Number of reported benign misbehaviour validators

- #### `nethermind_reported_malicious_misbehaviour` \{#reported_malicious_misbehaviour\}
  
  Number of reported malicious misbehaviour validators

- #### `nethermind_reveal_number` \{#reveal_number\}
  
  RANDAO number of reveal number transactions

- #### `nethermind_sealed_transactions` \{#sealed_transactions\}
  
  Number of sealed transactions generated by engine

- #### `nethermind_validators_count` \{#validators_count\}
  
  Number of current AuRa validators


### Blockchain

- #### `nethermind_best_known_block_number` \{#best_known_block_number\}
  
  The estimated highest block available.

- #### `nethermind_block_m_gas_per_sec` \{#block_m_gas_per_sec\}
  
  Histogram of block MGas per second

- #### `nethermind_block_processing_time_micros` \{#block_processing_time_micros\}
  
  Histogram of block processing time

- #### `nethermind_blockchain_height` \{#blockchain_height\}
  
  The current height of the canonical chain.

- #### `nethermind_blocks` \{#blocks\}
  
  Total number of blocks processed

- #### `nethermind_blocks_sealed` \{#blocks_sealed\}
  
  Total number of sealed blocks

- #### `nethermind_failed_block_seals` \{#failed_block_seals\}
  
  Total number of failed block seals

- #### `nethermind_gas_limit` \{#gas_limit\}
  
  Gas Limit for processed blocks

- #### `nethermind_gas_used` \{#gas_used\}
  
  Gas Used in processed blocks

- #### `nethermind_last_difficulty` \{#last_difficulty\}
  
  Difficulty of the last block

- #### `nethermind_mgas` \{#mgas\}
  
  Total MGas processed

- #### `nethermind_mgas_per_sec` \{#mgas_per_sec\}
  
  MGas processed per second

- #### `nethermind_processing_queue_size` \{#processing_queue_size\}
  
  Number of blocks awaiting for processing.

- #### `nethermind_recovery_queue_size` \{#recovery_queue_size\}
  
  Number of blocks awaiting for recovery of public keys from signatures.

- #### `nethermind_reorganizations` \{#reorganizations\}
  
  Total number of chain reorganizations

- #### `nethermind_state_merkleization_time` \{#state_merkleization_time\}
  
  State root calculation time

- #### `nethermind_total_difficulty` \{#total_difficulty\}
  
  Total difficulty on the chain

- #### `nethermind_transactions` \{#transactions\}
  
  Total number of transactions processed


### Db

- #### `nethermind_db_block_cache_size` \{#db_block_cache_size\}
  
  Database block cache size per database

- #### `nethermind_db_compaction_stats` \{#db_compaction_stats\}
  
  Metrics extracted from RocksDB Compaction Stats

- #### `nethermind_db_index_filter_size` \{#db_index_filter_size\}
  
  Database index and filter size per database

- #### `nethermind_db_memtable_size` \{#db_memtable_size\}
  
  Database memtable per database

- #### `nethermind_db_reads` \{#db_reads\}
  
  Database reads per database

- #### `nethermind_db_size` \{#db_size\}
  
  Database size per database

- #### `nethermind_db_stats` \{#db_stats\}
  
  Metrics extracted from RocksDB Compaction Stats and DB Statistics

- #### `nethermind_db_writes` \{#db_writes\}
  
  Database writes per database

- #### `nethermind_detailed_metrics_enabled` \{#detailed_metrics_enabled\}
- #### `nethermind_prewarmer_get_time` \{#prewarmer_get_time\}
  
  Prewarmer get operation times

- #### `nethermind_state_db_pruning` \{#state_db_pruning\}
  
  Indicator if StateDb is being pruned.

- #### `nethermind_state_reader_reads` \{#state_reader_reads\}
  
  Number of State Reader reads.

- #### `nethermind_state_skipped_writes` \{#state_skipped_writes\}
  
  Number of state trie writes skipped in net.

- #### `nethermind_state_tree_cache` \{#state_tree_cache\}
  
  Number of State Trie cache hits.

- #### `nethermind_state_tree_reads` \{#state_tree_reads\}
  
  Number of State Trie reads.

- #### `nethermind_state_tree_writes` \{#state_tree_writes\}
  
  Number of state trie writes.

- #### `nethermind_storage_reader_reads` \{#storage_reader_reads\}
  
  Number of storage reader reads.

- #### `nethermind_storage_skipped_writes` \{#storage_skipped_writes\}
  
  Number of storage trie writes skipped in net.

- #### `nethermind_storage_tree_cache` \{#storage_tree_cache\}
  
  Number of storage trie cache hits.

- #### `nethermind_storage_tree_reads` \{#storage_tree_reads\}
  
  Number of storage trie reads.

- #### `nethermind_storage_tree_writes` \{#storage_tree_writes\}
  
  Number of storage trie writes.


### Evm

- #### `nethermind_calls` \{#calls\}
  
  Number of calls to other contracts.

- #### `nethermind_code_db_cache` \{#code_db_cache\}
  
  Number of Code DB cache reads.

- #### `nethermind_contracts_analysed` \{#contracts_analysed\}
  
  Number of contracts' code analysed for jump destinations.

- #### `nethermind_creates` \{#creates\}
  
  Number of contract create calls.

- #### `nethermind_empty_calls` \{#empty_calls\}
  
  Number of calls made to addresses without code.

- #### `nethermind_evm_exceptions` \{#evm_exceptions\}
  
  Number of EVM exceptions thrown by contracts.

- #### `nethermind_exp_opcode` \{#exp_opcode\}
  
  Number of EXP opcodes executed.

- #### `nethermind_gas_price_ave` \{#gas_price_ave\}
  
  Mean tx gas price in block

- #### `nethermind_gas_price_max` \{#gas_price_max\}
  
  Maximum tx gas price in block

- #### `nethermind_gas_price_median` \{#gas_price_median\}
  
  Median tx gas price in block

- #### `nethermind_gas_price_min` \{#gas_price_min\}
  
  Minimum tx gas price in block

- #### `nethermind_m_copy_opcode` \{#m_copy_opcode\}
  
  Number of MCOPY opcodes executed.

- #### `nethermind_main_thread_calls` \{#main_thread_calls\}
  
  Number of calls to other contracts on main processing thread.

- #### `nethermind_main_thread_code_db_cache` \{#main_thread_code_db_cache\}
  
  Number of Code DB cache reads on main processing thread.

- #### `nethermind_main_thread_contracts_analysed` \{#main_thread_contracts_analysed\}
  
  Number of contracts' code analysed for jump destinations on main processing thread.

- #### `nethermind_main_thread_creates` \{#main_thread_creates\}
  
  Number of contract create calls on main processing thread.

- #### `nethermind_main_thread_empty_calls` \{#main_thread_empty_calls\}
  
  Number of calls made to addresses without code on main processing thread.

- #### `nethermind_main_thread_op_codes` \{#main_thread_op_codes\}
  
  Number of opcodes executed on main processing thread.

- #### `nethermind_main_thread_s_load_opcode` \{#main_thread_s_load_opcode\}
  
  Number of SLOAD opcodes executed on main processing thread.

- #### `nethermind_main_thread_s_store_opcode` \{#main_thread_s_store_opcode\}
  
  Number of SSTORE opcodes executed on main processing thread.

- #### `nethermind_main_thread_self_destructs` \{#main_thread_self_destructs\}
  
  Number of SELFDESTRUCT calls on main processing thread.

- #### `nethermind_number_of_background_tasks_scheduled` \{#number_of_background_tasks_scheduled\}
  
  The number of tasks currently scheduled in the background.

- #### `nethermind_op_codes` \{#op_codes\}
  
  Number of opcodes executed.

- #### `nethermind_self_destructs` \{#self_destructs\}
  
  Number of SELFDESTRUCT calls.

- #### `nethermind_sload_opcode` \{#sload_opcode\}
  
  Number of SLOAD opcodes executed.

- #### `nethermind_sstore_opcode` \{#sstore_opcode\}
  
  Number of SSTORE opcodes executed.

- #### `nethermind_tload_opcode` \{#tload_opcode\}
  
  Number of TLOAD opcodes executed.

- #### `nethermind_total_background_tasks_dropped` \{#total_background_tasks_dropped\}
  
  Total number of background tasks dropped because queue was full.

- #### `nethermind_total_background_tasks_executed` \{#total_background_tasks_executed\}
  
  Total number of background tasks executed.

- #### `nethermind_total_background_tasks_queued` \{#total_background_tasks_queued\}
  
  Total number of tasks queued for background execution.

- #### `nethermind_tstore_opcode` \{#tstore_opcode\}
  
  Number of TSTORE opcodes executed.


### Evm.Precompiles

- #### `nethermind_bls12381_fp2_to_g2_precompile` \{#bls12381_fp2_to_g2_precompile\}
  
  Number of BLS12_MAP_FP2_TO_G2 precompile calls.

- #### `nethermind_bls12381_fp_to_g1_precompile` \{#bls12381_fp_to_g1_precompile\}
  
  Number of BLS12_MAP_FP_TO_G1 precompile calls.

- #### `nethermind_bls12381_g1_add_precompile` \{#bls12381_g1_add_precompile\}
  
  Number of BLS12_G1ADD precompile calls.

- #### `nethermind_bls12381_g1_msm_precompile` \{#bls12381_g1_msm_precompile\}
  
  Number of BLS12_G1MSM precompile calls.

- #### `nethermind_bls12381_g2_add_precompile` \{#bls12381_g2_add_precompile\}
  
  Number of BLS12_G2ADD precompile calls.

- #### `nethermind_bls12381_g2_msm_precompile` \{#bls12381_g2_msm_precompile\}
  
  Number of BLS12_G2MSM precompile calls.

- #### `nethermind_bls12381_pairing_check_precompile` \{#bls12381_pairing_check_precompile\}
  
  Number of BLS12_PAIRING_CHECK precompile calls.

- #### `nethermind_bn254_add_precompile` \{#bn254_add_precompile\}
  
  Number of BN254_ADD precompile calls.

- #### `nethermind_bn254_mul_precompile` \{#bn254_mul_precompile\}
  
  Number of BN254_MUL precompile calls.

- #### `nethermind_bn254_pairing_precompile` \{#bn254_pairing_precompile\}
  
  Number of BN254_PAIRING precompile calls.

- #### `nethermind_e_c_recover_precompile` \{#e_c_recover_precompile\}
  
  Number of ECREC precompile calls.

- #### `nethermind_kzg_point_evaluation_precompile` \{#kzg_point_evaluation_precompile\}
  
  Number of KZG_POINT_EVALUATION precompile calls.

- #### `nethermind_mod_exp_precompile` \{#mod_exp_precompile\}
  
  Number of MODEXP precompile calls.

- #### `nethermind_ripemd160_precompile` \{#ripemd160_precompile\}
  
  Number of RIPEMD160 precompile calls.

- #### `nethermind_sec_p256r1_precompile` \{#sec_p256r1_precompile\}
  
  Number of P256VERIFY precompile calls.

- #### `nethermind_sha256_precompile` \{#sha256_precompile\}
  
  Number of SHA256 precompile calls.


### History

- #### `nethermind_blocks_pruned` \{#blocks_pruned\}
  
  The number of the historical blocks that have been pruned (since restart).

- #### `nethermind_oldest_stored_block_number` \{#oldest_stored_block_number\}
  
  The number of the oldest block stored.

- #### `nethermind_pruning_cutoff_blocknumber` \{#pruning_cutoff_blocknumber\}
  
  The cutoff block number from which historical blocks will be pruned.

- #### `nethermind_pruning_cutoff_timestamp` \{#pruning_cutoff_timestamp\}
  
  The cutoff timestamp from which historical blocks will be pruned.


### JsonRpc

- #### `nethermind_json_rpc_bytes_received` \{#json_rpc_bytes_received\}
  
  Number of JSON RPC bytes received.

- #### `nethermind_json_rpc_bytes_sent` \{#json_rpc_bytes_sent\}
  
  Number of JSON RPC bytes sent.

- #### `nethermind_json_rpc_errors` \{#json_rpc_errors\}
  
  Number of JSON RPC requests processed with errors.

- #### `nethermind_json_rpc_invalid_requests` \{#json_rpc_invalid_requests\}
  
  Number of JSON RPC requests that were invalid.

- #### `nethermind_json_rpc_request_deserialization_failures` \{#json_rpc_request_deserialization_failures\}
  
  Number of JSON RPC requests that failed JSON deserialization.

- #### `nethermind_json_rpc_requests` \{#json_rpc_requests\}
  
  Total number of JSON RPC requests received by the node.

- #### `nethermind_json_rpc_successes` \{#json_rpc_successes\}
  
  Number of JSON RPC requests processed successfully.


### Merge

- #### `nethermind_forkchoice_updated_execution_time` \{#forkchoice_updated_execution_time\}
  
  ForkchoiceUpdated request execution time

- #### `nethermind_get_blobs_request_duration_seconds` \{#get_blobs_request_duration_seconds\}
  
  Time taken to return the blobs from engine_getBlobsV2 request

- #### `nethermind_get_blobs_requests_failure_total` \{#get_blobs_requests_failure_total\}
  
  Number of responses to engine_getBlobsVX without all requested blobs

- #### `nethermind_get_blobs_requests_in_blobpool_total` \{#get_blobs_requests_in_blobpool_total\}
  
  Number of Blobs requested by engine_getBlobsV2 that are present in the blobpool

- #### `nethermind_get_blobs_requests_success_total` \{#get_blobs_requests_success_total\}
  
  Number of responses to engine_getBlobsV1 and engine_getBlobsV2 with all requested blobs

- #### `nethermind_get_blobs_requests_total` \{#get_blobs_requests_total\}
  
  Number of Blobs requested by engine_getBlobsV2

- #### `nethermind_get_payload_requests` \{#get_payload_requests\}
  
  Number of GetPayload Requests

- #### `nethermind_new_payload_execution_time` \{#new_payload_execution_time\}
  
  NewPayload request execution time

- #### `nethermind_number_of_requested_blobs` \{#number_of_requested_blobs\}
  
  Number of Blobs requested by engine_getBlobsV1

- #### `nethermind_number_of_sent_blobs` \{#number_of_sent_blobs\}
  
  Number of Blobs sent by engine_getBlobsV1

- #### `nethermind_number_of_transactions_in_get_payload` \{#number_of_transactions_in_get_payload\}
  
  Number of Transactions included in the Last GetPayload Request


### Network

- #### `nethermind_discovery_messages_received` \{#discovery_messages_received\}
  
  Number of sent discovery message

- #### `nethermind_discovery_messages_sent` \{#discovery_messages_sent\}
  
  Number of sent discovery message

- #### `nethermind_handshake_timeouts` \{#handshake_timeouts\}
  
  Number of devp2p handshake timeouts

- #### `nethermind_handshakes` \{#handshakes\}
  
  Number of devp2p handshakes

- #### `nethermind_incoming_connections` \{#incoming_connections\}
  
  Number of incoming connection.

- #### `nethermind_incoming_p2_p_message_bytes` \{#incoming_p2_p_message_bytes\}
  
  Bytes of incoming p2p packets.

- #### `nethermind_incoming_p2_p_messages` \{#incoming_p2_p_messages\}
  
  Number of incoming p2p packets.

- #### `nethermind_local_disconnects_total` \{#local_disconnects_total\}
  
  Number of local disconnects

- #### `nethermind_outgoing_connections` \{#outgoing_connections\}
  
  Number of outgoing connection.

- #### `nethermind_outgoing_p2_p_message_bytes` \{#outgoing_p2_p_message_bytes\}
  
  Bytes of outgoing p2p packets.

- #### `nethermind_outgoing_p2_p_messages` \{#outgoing_p2_p_messages\}
  
  Number of outgoing p2p packets.

- #### `nethermind_peer_candidate_count` \{#peer_candidate_count\}
  
  Number of candidate peers in peer manager

- #### `nethermind_peer_candidate_filter` \{#peer_candidate_filter\}
  
  Number of filter reason per peer candidate

- #### `nethermind_peer_limit` \{#peer_limit\}
  
  The maximum number of peers this node allows to connect.

- #### `nethermind_remote_disconnects_total` \{#remote_disconnects_total\}
  
  Number of remote disconnects


### Pruning

- #### `nethermind_cached_nodes_count` \{#cached_nodes_count\}
  
  Nodes that are currently kept in cache (either persisted or not)

- #### `nethermind_committed_nodes_count` \{#committed_nodes_count\}
  
  Nodes that have been committed since the session start. These nodes may have been pruned, persisted or replaced.

- #### `nethermind_deep_pruning_time` \{#deep_pruning_time\}
  
  Time taken by the last deep pruning.

- #### `nethermind_dirty_memory_used_by_cache` \{#dirty_memory_used_by_cache\}
  
  Estimated memory used by cache.

- #### `nethermind_dirty_nodes_count` \{#dirty_nodes_count\}
  
  Nodes that are currently kept in cache (either persisted or not)

- #### `nethermind_last_persisted_block_number` \{#last_persisted_block_number\}
  
  Last persisted block number (snapshot).

- #### `nethermind_loaded_from_cache_nodes_count` \{#loaded_from_cache_nodes_count\}
  
  Number of reads from the node cache.

- #### `nethermind_loaded_from_db_nodes_count` \{#loaded_from_db_nodes_count\}
  
  Number of DB reads.

- #### `nethermind_loaded_from_rlp_cache_nodes_count` \{#loaded_from_rlp_cache_nodes_count\}
  
  Number of reads from the RLP cache.

- #### `nethermind_memory_used_by_cache` \{#memory_used_by_cache\}
  
  Estimated memory used by cache.

- #### `nethermind_persisted_node_count` \{#persisted_node_count\}
  
  Nodes that have been persisted since the session start.

- #### `nethermind_persisted_node_pruning_time` \{#persisted_node_pruning_time\}
  
  Time taken by the last persisted node pruning.

- #### `nethermind_pruned_transient_nodes_count` \{#pruned_transient_nodes_count\}
  
  Nodes that have been removed from the cache during pruning because they were no longer needed.

- #### `nethermind_pruning_time` \{#pruning_time\}
  
  Time taken by the last pruning.

- #### `nethermind_removed_node_count` \{#removed_node_count\}
  
  Nodes that was removed via live pruning.

- #### `nethermind_replaced_nodes_count` \{#replaced_nodes_count\}
  
  Number of nodes that have been exactly the same as other nodes in the cache when committing.

- #### `nethermind_snapshot_persistence_time` \{#snapshot_persistence_time\}
  
  Time taken by the last snapshot persistence.


### Runner

- #### `nethermind_version` \{#version\}
  
  Version number


### Serialization.Rlp

- #### `nethermind_allocator_active_allocation_bytes` \{#allocator_active_allocation_bytes\}
  
  Active allocation bytes

- #### `nethermind_allocator_active_allocations` \{#allocator_active_allocations\}
  
  Active allocation count

- #### `nethermind_allocator_allocations` \{#allocator_allocations\}
  
  Allocations

- #### `nethermind_allocator_arena_count` \{#allocator_arena_count\}
  
  Arena count

- #### `nethermind_allocator_chunk_size` \{#allocator_chunk_size\}
  
  Chunk size of the allocator

- #### `nethermind_allocator_used_direct_memory` \{#allocator_used_direct_memory\}
  
  Used direct memory

- #### `nethermind_allocator_used_heap_memory` \{#allocator_used_heap_memory\}
  
  Used heap memory


### Shutter

- #### `nethermind_shutter_bad_transactions` \{#shutter_bad_transactions\}
  
  Number of invalid transactions that could not be included.

- #### `nethermind_shutter_encrypted_gas_used` \{#shutter_encrypted_gas_used\}
  
  Amount of encrypted gas used.

- #### `nethermind_shutter_eon` \{#shutter_eon\}
  
  Eon of the latest block.

- #### `nethermind_shutter_keypers` \{#shutter_keypers\}
  
  Size of keyper set in current eon.

- #### `nethermind_shutter_keys_missed` \{#shutter_keys_missed\}
  
  Number of keys not received.

- #### `nethermind_shutter_keys_received_time_offset` \{#shutter_keys_received_time_offset\}
  
  Relative time offset (ms) from slot boundary that keys were received.

- #### `nethermind_shutter_threshold` \{#shutter_threshold\}
  
  Number of keypers assumed to be honest and online for current eon.

- #### `nethermind_shutter_transactions` \{#shutter_transactions\}
  
  Number of transactions included.

- #### `nethermind_shutter_tx_pointer` \{#shutter_tx_pointer\}
  
  Number of transactions since Shutter genesis.


### State.Flat

- #### `nethermind_active_pooled_resource` \{#active_pooled_resource\}
  
  Active pooled resources by category and type

- #### `nethermind_active_snapshot_bundle` \{#active_snapshot_bundle\}
  
  Active snapshot bundles

- #### `nethermind_cached_pooled_resource` \{#cached_pooled_resource\}
  
  Cached pooled resources by category and type

- #### `nethermind_compact_time` \{#compact_time\}
  
  Time spend compacting snapshots

- #### `nethermind_compacted_snapshot_count` \{#compacted_snapshot_count\}
  
  Number of compacted snapshots

- #### `nethermind_compacted_snapshot_memory` \{#compacted_snapshot_memory\}
  
  Estimated memory used by compacted snapshot dictionaries in bytes

- #### `nethermind_created_pooled_resource` \{#created_pooled_resource\}
  
  Created pooled resources by category and type

- #### `nethermind_flat_persistence_snapshot_size` \{#flat_persistence_snapshot_size\}
  
  Persistence write size

- #### `nethermind_flat_persistence_time` \{#flat_persistence_time\}
  
  Time for persistence job

- #### `nethermind_importer_entries_count` \{#importer_entries_count\}
  
  Importer entries count

- #### `nethermind_importer_entries_count_flat` \{#importer_entries_count_flat\}
  
  Importer entries count flat

- #### `nethermind_read_only_snapshot_bundle_times` \{#read_only_snapshot_bundle_times\}
  
  Readonly snapshot bundle times

- #### `nethermind_snapshot_bundle_size` \{#snapshot_bundle_size\}
  
  Average snapshot bundle size in terms of num of snapshot

- #### `nethermind_snapshot_count` \{#snapshot_count\}
  
  Number of snapshots

- #### `nethermind_snapshot_memory` \{#snapshot_memory\}
  
  Estimated memory used by snapshots in bytes

- #### `nethermind_total_snapshot_memory` \{#total_snapshot_memory\}
  
  Total estimated snapshot memory in bytes


### StateComposition

- #### `nethermind_state_comp_account_branch_occupancy` \{#state_comp_account_branch_occupancy\}
  
  Account trie branch nodes grouped by child count

- #### `nethermind_state_comp_account_trie_branches` \{#state_comp_account_trie_branches\}
  
  Branch nodes in account trie

- #### `nethermind_state_comp_account_trie_bytes` \{#state_comp_account_trie_bytes\}
  
  Total bytes of account trie nodes

- #### `nethermind_state_comp_account_trie_extensions` \{#state_comp_account_trie_extensions\}
  
  Extension nodes in account trie

- #### `nethermind_state_comp_account_trie_leaves` \{#state_comp_account_trie_leaves\}
  
  Leaf nodes in account trie

- #### `nethermind_state_comp_accounts_total` \{#state_comp_accounts_total\}
  
  Total accounts in state

- #### `nethermind_state_comp_avg_account_path_depth` \{#state_comp_avg_account_path_depth\}
  
  Weighted average depth of account trie leaf paths

- #### `nethermind_state_comp_avg_branch_occupancy` \{#state_comp_avg_branch_occupancy\}
  
  Average children per account-trie branch node

- #### `nethermind_state_comp_avg_storage_path_depth` \{#state_comp_avg_storage_path_depth\}
  
  Weighted average depth of storage trie leaf paths

- #### `nethermind_state_comp_baseline_invalidations` \{#state_comp_baseline_invalidations\}
  
  Times the incremental baseline was detected as stale (prevRoot missing from DB) and auto-rescan was scheduled

- #### `nethermind_state_comp_code_bytes_total` \{#state_comp_code_bytes_total\}
  
  Aggregate contract bytecode size, deduplicated by code hash

- #### `nethermind_state_comp_contracts_total` \{#state_comp_contracts_total\}
  
  Total contracts (accounts with code)

- #### `nethermind_state_comp_contracts_with_storage` \{#state_comp_contracts_with_storage\}
  
  Contracts with non-empty storage

- #### `nethermind_state_comp_diff_errors` \{#state_comp_diff_errors\}
  
  Total diff computation errors

- #### `nethermind_state_comp_diffs_applied` \{#state_comp_diffs_applied\}
  
  Total incremental diffs applied

- #### `nethermind_state_comp_diffs_since_baseline` \{#state_comp_diffs_since_baseline\}
  
  Diffs applied since last full scan

- #### `nethermind_state_comp_empty_accounts` \{#state_comp_empty_accounts\}
  
  Accounts with no code and no storage

- #### `nethermind_state_comp_incremental_block` \{#state_comp_incremental_block\}
  
  Block number of latest incremental update

- #### `nethermind_state_comp_max_account_depth` \{#state_comp_max_account_depth\}
  
  Deepest occupied level of the account trie

- #### `nethermind_state_comp_max_storage_depth` \{#state_comp_max_storage_depth\}
  
  Deepest occupied level across all storage tries (Geth convention: raw depth + 1)

- #### `nethermind_state_comp_scan_block` \{#state_comp_scan_block\}
  
  Block number of last completed full scan

- #### `nethermind_state_comp_scan_duration_seconds` \{#state_comp_scan_duration_seconds\}
  
  Duration of last completed full scan in seconds

- #### `nethermind_state_comp_scan_missing_nodes` \{#state_comp_scan_missing_nodes\}
  
  Times a full or contract scan encountered a missing trie node (pruned/corrupt DB); the resulting stats are incomplete

- #### `nethermind_state_comp_scans_completed` \{#state_comp_scans_completed\}
  
  Total full scans completed

- #### `nethermind_state_comp_slot_count_histogram` \{#state_comp_slot_count_histogram\}
  
  Contracts grouped by log2 storage slot count bucket

- #### `nethermind_state_comp_storage_slots_total` \{#state_comp_storage_slots_total\}
  
  Total storage slots across all contracts

- #### `nethermind_state_comp_storage_trie_branches` \{#state_comp_storage_trie_branches\}
  
  Branch nodes in all storage tries

- #### `nethermind_state_comp_storage_trie_bytes` \{#state_comp_storage_trie_bytes\}
  
  Total bytes of all storage trie nodes

- #### `nethermind_state_comp_storage_trie_extensions` \{#state_comp_storage_trie_extensions\}
  
  Extension nodes in all storage tries

- #### `nethermind_state_comp_storage_trie_leaves` \{#state_comp_storage_trie_leaves\}
  
  Leaf nodes in all storage tries

- #### `nethermind_state_comp_trie_depth_bytes` \{#state_comp_trie_depth_bytes\}
  
  Trie bytes per depth

- #### `nethermind_state_comp_trie_depth_nodes` \{#state_comp_trie_depth_nodes\}
  
  Trie nodes per depth, by trie and node kind


### Synchronization

- #### `nethermind_snap_range_result` \{#snap_range_result\}
  
  Snap range result

- #### `nethermind_sync_peers` \{#sync_peers\}
  
  Number of sync peers.


### Trie

- #### `nethermind_tree_node_hash_calculations` \{#tree_node_hash_calculations\}
  
  Number of trie node hash calculations.

- #### `nethermind_tree_node_rlp_decodings` \{#tree_node_rlp_decodings\}
  
  Number of trie node RLP decodings.

- #### `nethermind_tree_node_rlp_encodings` \{#tree_node_rlp_encodings\}
  
  Number of trie node RLP encodings.


### TxPool

- #### `nethermind_blob_transaction_count` \{#blob_transaction_count\}
  
  Number of blob transactions in pool.

- #### `nethermind_blob_transactions_in_block` \{#blob_transactions_in_block\}
  
  Number of blob transactions in the block.

- #### `nethermind_blobs_in_block` \{#blobs_in_block\}
  
  Number of blobs in the block.

- #### `nethermind_dark_pool_ratio_level1` \{#dark_pool_ratio_level1\}
  
  Ratio of transactions in the block absent in hashCache.

- #### `nethermind_dark_pool_ratio_level2` \{#dark_pool_ratio_level2\}
  
  Ratio of transactions in the block absent in pending transactions.

- #### `nethermind_eip1559_transactions_ratio` \{#eip1559_transactions_ratio\}
  
  Ratio of 1559-type transactions in the block.

- #### `nethermind_eip7702_transactions_in_block` \{#eip7702_transactions_in_block\}
  
  Number of 7702-type transactions in the block.

- #### `nethermind_pending1559_transactions_added` \{#pending1559_transactions_added\}
  
  Number of pending 1559-type transactions added to transaction pool.

- #### `nethermind_pending_blob_transactions_added` \{#pending_blob_transactions_added\}
  
  Number of pending blob-type transactions added to transaction pool.

- #### `nethermind_pending_transactions_balance_below_value` \{#pending_transactions_balance_below_value\}
  
  Number of pending transactions received that were ignored because balance is less than txn value.

- #### `nethermind_pending_transactions_conflicting_tx_type` \{#pending_transactions_conflicting_tx_type\}
  
  Number of transactions rejected because of already pending tx of other type (allowed blob txs or others, not both at once).

- #### `nethermind_pending_transactions_discarded` \{#pending_transactions_discarded\}
  
  Number of pending transactions received that were ignored.

- #### `nethermind_pending_transactions_evicted` \{#pending_transactions_evicted\}
  
  Number of pending transactions evicted from transaction pool.

- #### `nethermind_pending_transactions_gas_limit_too_high` \{#pending_transactions_gas_limit_too_high\}
  
  Number of pending transactions received that were ignored because the gas limit was to high for the block.

- #### `nethermind_pending_transactions_hashes_received` \{#pending_transactions_hashes_received\}
  
  Number of hashes of pending transactions received from peers.

- #### `nethermind_pending_transactions_hashes_sent` \{#pending_transactions_hashes_sent\}
  
  Number of hashes of pending transactions broadcasted to peers.

- #### `nethermind_pending_transactions_known` \{#pending_transactions_known\}
  
  Number of already known pending transactions.

- #### `nethermind_pending_transactions_low_nonce` \{#pending_transactions_low_nonce\}
  
  Number of transactions with already used nonce.

- #### `nethermind_pending_transactions_malformed` \{#pending_transactions_malformed\}
  
  Number of malformed transactions.

- #### `nethermind_pending_transactions_nonce_gap` \{#pending_transactions_nonce_gap\}
  
  Number of pending transactions received that were ignored because of not having preceding nonce of this sender in TxPool.

- #### `nethermind_pending_transactions_nonce_too_far_in_future` \{#pending_transactions_nonce_too_far_in_future\}
  
  Number of transactions with nonce too far in future.

- #### `nethermind_pending_transactions_not_supported_tx_type` \{#pending_transactions_not_supported_tx_type\}
  
  Number of pending transactions received that were ignored because of not supported transaction type.

- #### `nethermind_pending_transactions_null_hash` \{#pending_transactions_null_hash\}
  
  Number of pending transactions rejected with a null hash.

- #### `nethermind_pending_transactions_passed_filters_but_cannot_compete_on_fees` \{#pending_transactions_passed_filters_but_cannot_compete_on_fees\}
  
  Number of pending transactions received that were ignored after passing early rejections as balance is too low to compete with lowest effective fee in transaction pool.

- #### `nethermind_pending_transactions_passed_filters_but_cannot_replace` \{#pending_transactions_passed_filters_but_cannot_replace\}
  
  Number of pending transactions received that were trying to replace tx with the same sender and nonce and failed.

- #### `nethermind_pending_transactions_received` \{#pending_transactions_received\}
  
  Number of pending transactions received from peers.

- #### `nethermind_pending_transactions_sent` \{#pending_transactions_sent\}
  
  Number of pending transactions broadcasted to peers.

- #### `nethermind_pending_transactions_size_too_large` \{#pending_transactions_size_too_large\}
  
  Number of pending transactions rejected due to excessive size.

- #### `nethermind_pending_transactions_too_low_balance` \{#pending_transactions_too_low_balance\}
  
  Number of pending transactions received that were ignored because balance too low for fee to be higher than the lowest fee in transaction pool.

- #### `nethermind_pending_transactions_too_low_fee` \{#pending_transactions_too_low_fee\}
  
  Number of pending transactions received that were ignored because of fee lower than the lowest fee in transaction pool.

- #### `nethermind_pending_transactions_too_low_fee_per_blob_gas` \{#pending_transactions_too_low_fee_per_blob_gas\}
  
  Number of pending transactions received that were ignored because of fee per blob gas lower than minimal requirement.

- #### `nethermind_pending_transactions_too_low_priority_fee` \{#pending_transactions_too_low_priority_fee\}
  
  Number of pending transactions received that were ignored because of priority fee lower than minimal requirement.

- #### `nethermind_pending_transactions_unresolvable_sender` \{#pending_transactions_unresolvable_sender\}
  
  Number of pending transactions received that were ignored because the sender couldn't be resolved.

- #### `nethermind_pending_transactions_with_expensive_filtering` \{#pending_transactions_with_expensive_filtering\}
  
  Number of pending transactions that reached filters which are resource expensive

- #### `nethermind_pending_transactions_zero_balance` \{#pending_transactions_zero_balance\}
  
  Number of pending transactions received that were ignored because balance is zero and cannot pay gas.

- #### `nethermind_transaction_count` \{#transaction_count\}
  
  Number of transactions in pool.

- #### `nethermind_transactions_reorged` \{#transactions_reorged\}
  
  Number of transactions reorganized during chain reorg.

- #### `nethermind_transactions_sourced_mem_pool` \{#transactions_sourced_mem_pool\}
  
  Number of transactions sourced from the mempool.

- #### `nethermind_transactions_sourced_private_order_flow` \{#transactions_sourced_private_order_flow\}
  
  Number of transactions sourced from private order flow.


<!--[end autogen]-->
